--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,6 +24,28 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <div class="criteria">
+          <div>
+            <label>Password length</label>
+            <input type="number" id="length" min='8' max='128' value='8' />
+          </div>
+          <div>
+            <label>Include lowercase letters</label> 
+            <input type="checkbox" id="lowercase" checked />
+          </div>
+          <div>
+            <label>Include uppercase letters</label> 
+            <input type="checkbox" id="uppercase" checked />
+          </div>
+          <div>
+            <label>Include numbers</label> 
+            <input type="checkbox" id="numbers" checked />
+          </div>
+          <div>
+            <label>Include symbols</label> 
+            <input type="checkbox" id="symbols" checked />
+          </div>
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
